--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/schedule
-spring.datasource.username=root
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/schedule?allowPublicKeyRetrieval=TRUE&useSSL=FALSE
+spring.datasource.username=marczar
 spring.datasource.password=Klaudia1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
